2006-05-05  Carl Hetherington  <inkscape@carlh.net>

	* src/draw-context.cpp, src/line-snapper.h, src/snap.cpp,
	src/snapper.cpp, src/line-snapper.cpp, src/snap.h,
	src/context-fns.cpp, src/object-snapper.h, src/seltrans.cpp,
	src/nodepath.cpp, src/snapper.h, src/object-snapper.cpp: various
	snapping fixes and cleanups.

06-05-04  Carl Hetherington  <inkscape@carlh.net>

	* src/guide-snapper.h, src/line-snapper.h, src/snap.cpp,
	src/snap.h, src/object-snapper.h, src/sp-namedview.cpp,
	src/grid-snapper.h: clean up knutux's fix for the snapper crash.

2006-05-03  Michael Wybrow  <mjwybrow@users.sourceforge.net>

	* po/pt_BR.po: Fix some "Unmatched closing </b>" warnings.

	* src/jabber_whiteboard/pedrodom.cpp: Compile fix for Mac OS.
	
2006-05-03  Carl Hetherington  <inkscape@carlh.net>

	* src/arc-context.cpp, src/connector-context.cpp,
	src/context-fns.cpp, src/desktop.cpp, src/draw-context.cpp,
	src/nodepath.cpp, src/object-edit.cpp, src/pencil-context.cpp,
	src/rect-context.cpp, src/selection-chemistry.cpp,
	src/seltrans.cpp, src/snap.cpp, src/snap.h, src/sp-namedview.cpp,
	src/sp-namedview.h, src/spiral-context.cpp, src/star-context.cpp,
	src/ui/dialog/document-properties.cpp: Give SPNamedView a
	SnapManager instance and use it for all management of snapping
	settings.

	* src/snap.cpp, src/snap.h: remove the unused namedview_dim_snap_list()

2006-05-01  Jon A. Cruz  <jon@joncruz.org>

	* src/Makefile.am, src/Makefile_insert, src/attributes-test.h,
	  src/color-profile-test.h, src/mod360-test.cpp, src/mod360-test.h,
	  src/round-test.cpp, src/round-test.h, src/sp-gradient-test.cpp,
	  src/sp-gradient-test.h, src/sp-style-elem-test.cpp,
	  src/sp-style-elem-test.h, src/style-test.h, src/test-helpers.h:
	  Replaced four more tests with CxxTest versions.

2006-05-01  MenTaLguY  <mental@rydia.net>

	* src/display/nr-arena-item.cpp:

	  use GC allocator for bitmap cache and transform

2006-05-01  Marco Scholten  <mscholtn@xs4all.nl>
